# CoTLocalization

./: .gitignore  README.md  clean.py  main.py  migrate_all_database_files.py  migrate_database_names.py  newtrans.py  output.json  output.txt  pyproject.toml  reextract_and_fix.py  run_test.py  run_updater.py  tempCodeRunnerFile.py  test.py  test_data.js  update_game_files.py  versionUpdate.py  yohi.py
game_updater/: __init__.py  browser_automation.py  config.py  file_handler.py  itch_api.py  main.py
src/: HTMLUpdate.py  __init__.py  consts.py  fetch.py  fetch_old.py  newVersionCompare.py  parseJS.py  parseJS4Twee.py  parseJSv2.py  parseTwee.py  replacer.py  tempCodeRunnerFile.py  trans.py
